# config-env-initializer

./: .gitignore  README.md  features.md  pyproject.toml  reqs.txt  requirements.txt
config_env_initializer/: .config_loader.py.swp  __main__.py  config_loader.py  config_normalizer.py  config_utils.py  config_validator.py  exceptions.py  execution_monitor.py  generate_file_tree.py  logger_setup.py  project_setup.py  schema_utils.py  sensitive.py
config_env_initializer/sql/: execution_metrics.sql
example_project/: .gitignore  main.py  requirements.txt
example_project/auth/jira/: example.yaml
example_project/auth/qtest/: example.yaml
example_project/schema/: schema.py
scripts/: archive_logs.py  generate_file_tree.py
scripts/file_tree_output/: file_tree_250504Z231154.txt  file_tree_250505Z014815.txt  file_tree_250505Z032909.txt  file_tree_250505Z033953.txt  file_tree_250508Z030404.txt  file_tree_250508Z033411.txt  file_tree_250529Z222900.txt  file_tree_250601Z203715.txt  file_tree_250610Z000727.txt
sql/: execution_metrics_update.sql
tests/: test_config_validators.py  test_custom_validator_integration.py  test_execution_monitor.py  test_generate_config.py  test_init_folders.py  test_schema_import_behavior.py  test_schema_validation.py  test_validate_config.py  test_validation_errors.py
