[project]
name = "config-env-initializer"
version = "0.1.0"
description = "Reusable configuration initializer for Python script-based projects"
authors = [
    { name = "Jacob Dec", email = "abidingreflection@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml"
]

[project.scripts]
config-init = "config_env_initializer.__main__:main"
init-config = "config_env_initializer.__main__:main"

[tool.setuptools]
packages = ["config_env_initializer"]
include-package-data = true